# rweather-decoder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
src/: datetime.rs  lib.rs  metar.rs
tests/: it_metar.rs  it_metar_generate_outputs.sh
tests/data/metar/: it_anchor_time_input.txt  it_anchor_time_output.json  it_cloud_input.txt  it_cloud_output.json  it_daytime_input.txt  it_daytime_output.json  it_header_input.txt  it_header_output.json  it_null_input.txt  it_null_output.json  it_present_weather_input.txt  it_present_weather_output.json  it_pressure_input.txt  it_pressure_output.json  it_recent_weather_input.txt  it_recent_weather_output.json  it_rvr_input.txt  it_rvr_output.json  it_sea_input.txt  it_sea_output.json  it_temperature_input.txt  it_temperature_output.json  it_trend_input.txt  it_trend_output.json  it_visibility_input.txt  it_visibility_output.json  it_wind_input.txt  it_wind_output.json  it_wind_shear_input.txt  it_wind_shear_output.json
